Bug 336556 - Importing database to server fails if password is needed but not stored
Summary: Importing database to server fails if password is needed but not stored
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Migration/Import/Export (other bugs)
Version First Reported In: 2.9 Alpha
Platform: unspecified All
: NOR normal
Target Milestone: 2.8.6
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-21 20:38 UTC by Jarosław Staniek
Modified: 2014-09-20 21:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2014-06-21 20:38:49 UTC
"Import Database" assistant may require password to access source or destination server but it does not ask. Then connection error appears, and e.g. for MySQL there is a hint from the server "Using password: NO".


Reproducible: Always




A simple workaround is to in the current Kexi session, click Edit for desired database connections. Then enter password. There is no need to check "Save password in the shortcut file" -- Kexi will keep the password for the current session only. After Save button is pressed, the connection can be used and password will be properly sent to the server upon import.
Comment 1 Jarosław Staniek 2014-09-20 21:14:57 UTC
Git commit 3292de7f753604d37db694e668c0389a0cb3fbc7 by Jaroslaw Staniek.
Committed on 20/09/2014 at 00:03.
Pushed by staniek into branch 'calligra/2.8'.

Many fixes for Kexi database import assistant

* Import Database" assistant may require password to access
  source or destination server but it does not ask. Then connection
  error appears.
* reload source database list if user pressed back and selected different connection
* improve saving recent directories
* do not ask twice about destination filename
* in addition to title, properly ask for database name for server destination databases
* properly open imported database (file)
Related: bug 336557, bug 336558
FIXED-IN:2.8.6
DIGEST:Kexi greatly improves its Database Import assistant.

M  +1    -6    kexi/main/startup/KexiNewProjectAssistant.cpp
M  +10   -0    kexi/main/startup/KexiStartupFileHandler.cpp
M  +5    -1    kexi/main/startup/KexiStartupFileHandler.h
M  +0    -1    kexi/migration/CMakeLists.txt
M  +130  -59   kexi/migration/importwizard.cpp
M  +4    -1    kexi/migration/importwizard.h
M  +1    -1    kexi/widget/KexiDBTitlePage.ui

http://commits.kde.org/calligra/3292de7f753604d37db694e668c0389a0cb3fbc7
Comment 2 Jarosław Staniek 2014-09-20 21:17:05 UTC
Git commit 5513c16d57ac34933cb41da1419b437224f70d07 by Jaroslaw Staniek.
Committed on 20/09/2014 at 00:03.
Pushed by staniek into branch 'master'.

Many fixes for Kexi database import assistant

* Import Database" assistant may require password to access
  source or destination server but it does not ask. Then connection
  error appears.
* reload source database list if user pressed back and selected different connection
* improve saving recent directories
* do not ask twice about destination filename
* in addition to title, properly ask for database name for server destination databases
* properly open imported database (file)
Related: bug 336557, bug 336558
FIXED-IN:2.8.6

M  +0    -1    kexi/main/CMakeLists.txt
M  +1    -6    kexi/main/startup/KexiNewProjectAssistant.cpp
M  +130  -52   kexi/migration/importwizard.cpp
M  +4    -1    kexi/migration/importwizard.h
M  +1    -0    kexi/widget/CMakeLists.txt
M  +1    -1    kexi/widget/KexiDBTitlePage.ui
R  +10   -2    kexi/widget/KexiStartupFileHandler.cpp [from: kexi/main/startup/KexiStartupFileHandler.cpp - 098% similarity]
R  +5    -1    kexi/widget/KexiStartupFileHandler.h [from: kexi/main/startup/KexiStartupFileHandler.h - 094% similarity]

http://commits.kde.org/calligra/5513c16d57ac34933cb41da1419b437224f70d07