Many fixes for Kexi database import assistant

* Import Database" assistant may require password to access
  source or destination server but it does not ask. Then connection
  error appears.
* reload source database list if user pressed back and selected different connection
* improve saving recent directories
* do not ask twice about destination filename
* in addition to title, properly ask for database name for server destination databases
* properly open imported database (file)

BUG:336556
BUG:336557
BUG:336558
FIXED-IN:2.8.6
DIGEST:Kexi greatly improves its Database Import assistant.